--- a/split-dns.conf
+++ b/split-dns.conf
@@ -28,4 +28,130 @@ split-dns = getdropbox.com
 split-dns = paper.dropbox.com
 split-dns = dropbox-dns.com
 
+#facebook
+split-dns = cdninstagram.com
+split-dns = facebook.com
+split-dns = facebook.design
+split-dns = facebook.net
+split-dns = fb.com
+split-dns = fb.me
+split-dns = fbcdn.net
+split-dns = fbsbx.com
+split-dns = instagram.com
+split-dns = instagram-press.com
+split-dns = m.me
+split-dns = messenger.com
+split-dns = oculus.com
+split-dns = oculuscdn.com
+split-dns = rocksdb.org
+split-dns = thefacebook.com
+split-dns = whatsapp.com
+split-dns = whatsapp.net
+
+#google
+split-dns = google.com
+split-dns = google
+split-dns = goog
+split-dns = admob.com
+split-dns = adsense.com
+split-dns = adwords.com
+split-dns = abc.xyz
+split-dns = android.com
+split-dns = appspot.com
+split-dns = blogger.com
+split-dns = blogspot.com
+split-dns = chromium.org
+split-dns = chrome.com
+split-dns = chromebook.com
+split-dns = cobrasearch.com
+split-dns = feedburner.com
+split-dns = doubleclick.com
+split-dns = doubleclick.net
+split-dns = igoogle.com
+split-dns = foofle.com
+split-dns = froogle.com
+split-dns = googleanalytics.com
+split-dns = google-analytics.com
+split-dns = googletagmanager.com
+split-dns = googletagservices.com
+split-dns = googlecode.com
+split-dns = googlesource.com
+split-dns = googledrive.com
+split-dns = googlearth.com
+split-dns = googleearth.com
+split-dns = googlemaps.com
+split-dns = googlepagecreator.com
+split-dns = googlescholar.com
+split-dns = gmail.com
+split-dns = googlemail.com
+split-dns = keyhole.com
+split-dns = madewithcode.com
+split-dns = panoramio.com
+split-dns = picasa.com
+split-dns = urchin.com
+split-dns = waze.com
+split-dns = like.com
+split-dns = google.org
+split-dns = google.net
+split-dns = gmodules.com
+split-dns = googleadservices.com
+split-dns = googleapps.com
+split-dns = googleapis.com
+split-dns = googleapis.cn
+split-dns = goo.gl
+split-dns = googlebot.com
+split-dns = googlecommerce.com
+split-dns = googlesyndication.com
+split-dns = g.co
+split-dns = whatbrowser.org
+split-dns = withgoogle.com
+split-dns = 1e100.net
+split-dns = ggpht.com
+split-dns = googleusercontent.com
+split-dns = googlecapital.com
+split-dns = gv.com
+split-dns = golang.org
+split-dns = godoc.org
+split-dns = gstatic.com
+split-dns = amp.dev
+split-dns = ampproject.org
+split-dns = autodraw.com
+split-dns = blogblog.com
+split-dns = certificate-transparency.org
+split-dns = dart.dev
+split-dns = dartlang.org
+split-dns = fuchsia.dev
+split-dns = gvt0.com
+split-dns = gvt1.com
+split-dns = gvt2.com
+split-dns = gvt3.com
+split-dns = material.io
+split-dns = polymer-project.org
+split-dns = tensorflow.org
+split-dns = thinkwithgoogle.com
+split-dns = unfiltered.news
+split-dns = webmproject.org
+split-dns = webrtc.org
+
+#nytimes
+split-dns = nytimes.com
+split-dns = nytcn.me
+split-dns = tynt.com
+split-dns = nytstyle.com
+split-dns = nyt.com
+
+#pixiv
+split-dns = pixiv.net
+split-dns = pixiv.org
+split-dns = pixiv.co.jp
+split-dns = pximg.net
+
+#pornhub
+split-dns = pornhub.com
+split-dns = pornhubpremium.com
+split-dns = phncdn.com
+
+#reuters
+split-dns = reuters.com
+split-dns = reuters.tv
 
