--- a/cloud-torrent.service
+++ b/cloud-torrent.service
@@ -2,8 +2,8 @@
 Description=cloud-torrent
 
 [Service]
-WorkingDirectory=/ct/
-ExecStart=/ct/ct --port 20180 --log 
+WorkingDirectory=/cloud-torrent/
+ExecStart=/cloud-torrent/cloud-torrent --port 20180 --log 
 Restart=always
 RestartSec=3
 
