--- a/Caddyfile
+++ b/Caddyfile
@@ -7,3 +7,12 @@ wangyi.cf
     header_upstream -Origin
   }
 }
+www.wangyi.cf
+{
+  root /var/www
+  tls tanghb2005@gmail.com
+  proxy /v2 localhost:6443 {
+    websocket
+    header_upstream -Origin
+  }
+}
