--- a/gost.service
+++ b/gost.service
@@ -5,7 +5,7 @@ After=network.target
 [Service]
 Type=simple
 User=nobody
-ExecStart=/usr/bin/gost -L mws://:8080
+ExecStart=/usr/bin/gost -L mws://127.0.0.1:8080
 
 [Install]
 WantedBy=multi-user.target
