--- a/dnsmasq.conf
+++ b/dnsmasq.conf
@@ -17,6 +17,7 @@ all-servers
 #server=8.8.8.8
 #server=8.8.4.4
 server=127.0.0.1#5300
+server=/huawei.com/114.114.114.114
 server=/services.googleapis.cn/127.0.0.1#5300
 server=/phncdn.com/127.0.0.1#5353
 server=/cn/127.0.0.1#5353
