--- a/ocserv.conf
+++ b/ocserv.conf
@@ -1,5 +1,6 @@
 auth = "certificate"
-#auth = "plain[passwd=/etc/ocserv/ocpasswd]"
+#auth = "plain[passwd=/etc/ocserv/passwd]"
+#ocpasswd -c /etc/ocserv/passwd your-username
 
 tcp-port = 443
 udp-port = 440
