--- a/ocserv.conf
+++ b/ocserv.conf
@@ -8,6 +8,8 @@ udp-port = 440
 server-cert = /etc/ocserv/server-cert.pem
 server-key = /etc/ocserv/server-key.pem
 ca-cert = /etc/ocserv/ca-cert.pem
+#server-cert = /etc/ssl/caddy/acme/acme-v02.api.letsencrypt.org/sites/wangyi.cf/wangyi.cf.crt
+#server-key = /etc/ssl/caddy/acme/acme-v02.api.letsencrypt.org/sites/wangyi.cf/wangyi.cf.key
 
 socket-file = /var/run/ocserv-socket
 pid-file = /var/run/ocserv.pid
