--- a/dnsmasq.conf
+++ b/dnsmasq.conf
@@ -13,6 +13,10 @@ cache-size = 1000
 #address=/services.googleapis.cn/172.217.5.202
 #address=/github-production-release-asset-2e65be.s3.amazonaws.com/52.216.225.248
 
+address=/storage.live.com/120.52.73.188
+address=/bn.files.1drv.com/120.52.73.188
+address=/dm.files.1drv.com/120.52.73.188
+
 all-servers 
 #server=8.8.8.8
 #server=8.8.4.4
