--- a/dnsmasq.conf
+++ b/dnsmasq.conf
@@ -19,6 +19,7 @@ address=/ftchinese.com/118.143.65.103
 address=/storage.live.com/120.52.73.188
 address=/bn.files.1drv.com/120.52.73.188
 address=/dm.files.1drv.com/120.52.73.188
+address=/huawei.com/120.52.73.188
 
 all-servers 
 #server=8.8.8.8
