--- a/dnsmasq.conf
+++ b/dnsmasq.conf
@@ -17,8 +17,8 @@ address=/www.ftchinese.com/118.143.65.103
 address=/ftchinese.com/118.143.65.103
 
 address=/storage.live.com/120.52.73.188
-address=/bn.files.1drv.com/120.52.73.188
-address=/dm.files.1drv.com/120.52.73.188
+address=/1drv.com/120.52.73.188
+address=/api.onedrive.com/120.52.73.188
 address=/huawei.com/120.52.73.188
 
 all-servers 
