--- a/Caddyfile
+++ b/Caddyfile
@@ -7,6 +7,14 @@ wangyi.cf
     header_upstream -Origin
   }
 }
+oc.wangyi.cf
+{
+  root /var/www
+  tls tanghb@outlook.com
+  proxy / localhost:8443 {
+    websocket
+  }
+}
 ct.wangyi.cf
 {
   root /var/www
