--- a/dnsmasq.conf
+++ b/dnsmasq.conf
@@ -16,9 +16,11 @@ cache-size = 1000
 address=/www.ftchinese.com/118.143.65.103
 address=/ftchinese.com/118.143.65.103
 
-address=/storage.live.com/120.52.73.188
-address=/1drv.com/120.52.73.188
+address=/storage.live.com/120.52.73.187
+address=/files.1drv.com/120.52.73.187
+address=/login.live.com/120.52.73.188
 address=/api.onedrive.com/120.52.73.188
+address=/mobile.pipe.aria.microsoft.com/120.52.73.188
 address=/huawei.com/120.52.73.188
 
 all-servers 
