--- a/sniproxy.conf
+++ b/sniproxy.conf
@@ -1,31 +1,22 @@
-user daemon
-pidfile /var/tmp/sniproxy.pid
-
-error_log {
-    syslog daemon
-    priority notice
-}
+user nobody
+group nogroup
+pidfile /var/run/sniproxy.pid
 
 resolver {
-    nameserver 8.8.8.8
-    nameserver 8.8.4.4 # local dns should be better
+    nameserver 127.0.0.1
     mode ipv4_only
-}
-listener 0.0.0.0:80 {
-    proto http
-    access_log {
-        filename /var/log/sniproxy/http_access.log
-        priority notice
-    }
 }
 listener 0.0.0.0:443 {
     proto tls
-    access_log {
-        filename /var/log/sniproxy/https_access.log
-        priority notice
-    }
+    fallback 127.0.0.1:8080
 }
 
 table {
-
+    gost.wangyi.cf 127.0.0.1:8080
+    oc.wangyi.cf   127.0.0.1:4430
+    www.wangyi.cf  127.0.0.1:6443
+    .*storage\.live\.com$	*:443
+    .*files\.1drv\.com$	    *:443
+    .*docs\.live\.net$      *:443
+    .*aria\.microsoft\.com$ *:443
 }
