--- a/dnsmasq.conf
+++ b/dnsmasq.conf
@@ -8,19 +8,16 @@ no-poll
 #strict-order 
 cache-size = 1000
 
-#address=/www.baidu.com/115.239.210.27
-#address=/m.baidu.com/115.239.217.68
-#address=/services.googleapis.cn/172.217.5.202
-#address=/github-production-release-asset-2e65be.s3.amazonaws.com/52.216.225.248
-
 address=/www.ftchinese.com/118.143.65.103
 address=/ftchinese.com/118.143.65.103
-
-address=/storage.live.com/120.52.73.187
-address=/files.1drv.com/120.52.73.187
-address=/login.live.com/120.52.73.188
-address=/api.onedrive.com/120.52.73.188
-address=/mobile.pipe.aria.microsoft.com/120.52.73.188
+#address=/services.googleapis.cn/172.217.5.202
+address=/github-production-release-asset-2e65be.s3.amazonaws.com/120.52.73.188
+address=/aria.microsoft.com/198.35.47.70
+address=/storage.live.com/198.35.47.70
+address=/files.1drv.com/198.35.47.70
+address=/events.data.microsoft.com/198.35.47.70
+#address=/login.live.com/198.35.47.70
+address=/skydrive.wns.windows.com/198.35.47.70
 address=/huawei.com/120.52.73.188
 
 all-servers 
