--- a/sniproxy.conf
+++ b/sniproxy.conf
@@ -1,22 +1,23 @@
-user nobody
-group nogroup
+user daemon
 pidfile /var/run/sniproxy.pid
 
 resolver {
-    nameserver 127.0.0.1
+    nameserver 8.8.8.8
     mode ipv4_only
 }
 listener 0.0.0.0:443 {
-    proto tls
-    fallback 127.0.0.1:8080
+    protocol tls
+    fallback 44.44.44.44:44
 }
 
 table {
+    ct.wangyi.cf   127.0.0.1:20180
     gost.wangyi.cf 127.0.0.1:8080
     oc.wangyi.cf   127.0.0.1:4430
     www.wangyi.cf  127.0.0.1:6443
-    .*storage\.live\.com$	*:443
-    .*files\.1drv\.com$	    *:443
-    .*docs\.live\.net$      *:443
-    .*aria\.microsoft\.com$ *:443
+    .*events\.data\.microsoft\.com *
+    skydrive.wns.windows.com *
+    .*aria\.microsoft\.com *
+    .*storage\.live\.com *
+    .*files\.1drv\.com *
 }
