--- a/sniproxy.service
+++ b/sniproxy.service
@@ -1,12 +1,11 @@
 
 [Unit]
-Description=sniproxy server
-After=network-online.target
-     
+Description= sni proxy
+After=network.target
+
 [Service]
+ExecStart=/usr/sbin/sniproxy -f
 Restart=always
-ExecStart=/usr/sbin/sniproxy -f -c /etc/sniproxy.conf
-ExecReload=/bin/kill -HUP $MAINPID
 
 [Install]
 WantedBy=multi-user.target
