--- a/sniproxy.conf
+++ b/sniproxy.conf
@@ -11,10 +11,9 @@ listener 0.0.0.0:443 {
 }
 
 table {
-    ct.wangyi.cf   127.0.0.1:20180
+    ct.wangyi.cf   127.0.0.1:5443
     gost.wangyi.cf 127.0.0.1:8080
-    oc.wangyi.cf   127.0.0.1:4430
-    www.wangyi.cf  127.0.0.1:6443
+    v2.wangyi.cf   127.0.0.1:6443
     .*events\.data\.microsoft\.com *
     skydrive.wns.windows.com *
     .*aria\.microsoft\.com *
