--- a/dnsmasq.conf
+++ b/dnsmasq.conf
@@ -1,4 +1,6 @@
-listen-address = 192.168.18.1,192.168.88.1
+listen-address = 27.0.0.1,192.168.88.1
+interface=lo,wg0
+bind-interfaces
 no-resolv
 no-hosts
 no-poll
