--- a/sniproxy.conf
+++ b/sniproxy.conf
@@ -14,9 +14,16 @@ table {
     ct.wangyi.cf   127.0.0.1:5443
     gost.wangyi.cf 127.0.0.1:8080
     v2.wangyi.cf   127.0.0.1:6443
-    .*events\.data\.microsoft\.com *
+    graph.microsoft.com *
+    config.teams.microsoft.com *
+    login.live.com *
+    api.onedrive.com *
     skydrive.wns.windows.com *
+    .*blob\.core\.windows\.net *
+    .*settings\.live\.net *
+    .*events\.data\.microsoft\.com *
     .*aria\.microsoft\.com *
     .*storage\.live\.com *
     .*files\.1drv\.com *
+
 }
