--- a/ocserv.conf
+++ b/ocserv.conf
@@ -1,9 +1,9 @@
-auth = "certificate"
-#auth = "plain[passwd=/etc/ocserv/passwd]"
+#auth = "certificate"
+auth = "plain[passwd=/etc/ocserv/passwd]"
 #ocpasswd -c /etc/ocserv/passwd your-username
 
 tcp-port = 443
-udp-port = 440
+#udp-port = 440
 
 server-cert = /etc/ocserv/server-cert.pem
 server-key = /etc/ocserv/server-key.pem
@@ -40,7 +40,7 @@ try-mtu-discovery = false
 mtu = 1480
 compression = false
 #no-compress-limit = 256
-output-buffer = 500
+output-buffer = 5000
 #use-utmp = true
 #use-occtl = true
 predictable-ips = true
