--- a/ocserv.conf
+++ b/ocserv.conf
@@ -5,11 +5,11 @@ auth = "plain[passwd=/etc/ocserv/passwd]"
 tcp-port = 443
 #udp-port = 440
 
-server-cert = /etc/ocserv/server-cert.pem
-server-key = /etc/ocserv/server-key.pem
-ca-cert = /etc/ocserv/ca-cert.pem
-#server-cert = /etc/ssl/caddy/acme/acme-v02.api.letsencrypt.org/sites/wangyi.cf/wangyi.cf.crt
-#server-key = /etc/ssl/caddy/acme/acme-v02.api.letsencrypt.org/sites/wangyi.cf/wangyi.cf.key
+#server-cert = /etc/ocserv/server-cert.pem
+#server-key = /etc/ocserv/server-key.pem
+#ca-cert = /etc/ocserv/ca-cert.pem
+server-cert = /root/.acme.sh/wangyi.cf/wangyi.cf.cer
+server-key = /root/.acme.sh/wangyi.cf/wangyi.cf.key
 
 socket-file = /var/run/ocserv-socket
 pid-file = /var/run/ocserv.pid
