--- a/wg0.conf
+++ b/wg0.conf
@@ -2,8 +2,9 @@
 PrivateKey = YM1ktOPrdzW7bABxoJaA1zvK/zeMPWsK0uqrGNw/TUw=
 Address = 192.168.88.1/24
 ListenPort = 443
-PostUp = ip link set eth0 txqueuelen 5000; ip link set wg0 txqueuelen 5000
-mtu = 1420
+PostUp   = iptables -A FORWARD -i %i -j ACCEPT; iptables -A FORWARD -o %i -j ACCEPT; iptables -t nat -A POSTROUTING -o eth0 -j MASQUERADE
+PostDown = iptables -D FORWARD -i %i -j ACCEPT; iptables -D FORWARD -o %i -j ACCEPT; iptables -t nat -D POSTROUTING -o eth0 -j MASQUERADE
+mtu = 1400
 
 #home-pc
 [Peer]
