--- a/dnsmasq.conf
+++ b/dnsmasq.conf
@@ -17,16 +17,18 @@ address=/huawei.com/120.52.73.188
 address=/github-production-release-asset-2e65be.s3.amazonaws.com/120.52.73.188
 
 address=/aria.microsoft.com/192.168.88.1
-address=/config.teams.microsoft.com/192.168.88.1
-address=/graph.microsoft.com/192.168.88.1
-address=/settings.live.net/192.168.88.1
-address=/blob.core.windows.net/192.168.88.1
+#address=/config.teams.microsoft.com/192.168.88.1
+#address=/graph.microsoft.com/192.168.88.1
+#address=/settings.live.net/192.168.88.1
+#address=/blob.core.windows.net/192.168.88.1
 address=/storage.live.com/192.168.88.1
 address=/files.1drv.com/192.168.88.1
 address=/events.data.microsoft.com/192.168.88.1
-address=/login.live.com/192.168.88.1
-address=/api.onedrive.com/192.168.88.1
-address=/skydrive.wns.windows.com/192.168.88.1
+address=/events.data.msn.com/192.168.88.1
+#address=/login.live.com/192.168.88.1
+#address=/api.onedrive.com/192.168.88.1
+#address=/skydrive.wns.windows.com/192.168.88.1
+address=/wns.windows.com/192.168.88.1
 
 address=/ct.wangyi.cf/192.168.88.1
 
