--- a/dnsmasq.conf
+++ b/dnsmasq.conf
@@ -1,6 +1,6 @@
-listen-address = 27.0.0.1,192.168.88.1
-interface=lo,wg0
-bind-interfaces
+listen-address = 127.0.0.1,192.168.88.1
+#interface=lo,wg0
+#bind-interfaces
 no-resolv
 no-hosts
 no-poll
@@ -15,6 +15,14 @@ address=/ftchinese.com/118.143.65.103
 address=/huawei.com/120.52.73.188
 #address=/services.googleapis.cn/172.217.5.202
 address=/github-production-release-asset-2e65be.s3.amazonaws.com/120.52.73.188
+
+address=/phncdn.com/192.168.88.1
+address=/pornhub.com/192.168.88.1
+address=/trafficjunky.net/192.168.88.1
+address=/securedataimages.com/192.168.88.1
+address=/trafficjunky.net/192.168.88.1
+address=/adtng.com/192.168.88.1
+address=/etahub.com/192.168.88.1
 
 address=/aria.microsoft.com/192.168.88.1
 #address=/config.teams.microsoft.com/192.168.88.1
