--- a/dnsmasq.conf
+++ b/dnsmasq.conf
@@ -24,6 +24,17 @@ address=/trafficjunky.net/192.168.88.1
 address=/adtng.com/192.168.88.1
 address=/etahub.com/192.168.88.1
 
+address=/pornhub.com/192.168.88.100
+address=/ci.phncdn.com/192.168.88.101
+address=/cv.phncdn.com/192.168.88.102
+address=/di.phncdn.com/192.168.88.103
+address=/dw.phncdn.com/192.168.88.104
+address=/ew.phncdn.com/192.168.88.105
+address=/cdn1d-static-shared.phncdn.com/192.168.88.106
+address=/c1v-h.phncdn.com/192.168.88.107
+address=/d1v-h.phncdn.com/192.168.88.108
+
+
 address=/aria.microsoft.com/192.168.88.1
 #address=/config.teams.microsoft.com/192.168.88.1
 #address=/graph.microsoft.com/192.168.88.1
