--- a/wg0.conf
+++ b/wg0.conf
@@ -2,8 +2,10 @@
 PrivateKey = YM1ktOPrdzW7bABxoJaA1zvK/zeMPWsK0uqrGNw/TUw=
 Address = 192.168.88.1/24
 ListenPort = 443
-PostUp   = ifconfig wg0:0 192.168.88.100 netmask 255.255.255.0 up;ifconfig wg0:1 192.168.88.101 netmask 255.255.255.0 up;ifconfig wg0:2 192.168.88.102 netmask 255.255.255.0 up;ifconfig wg0:3 192.168.88.103 netmask 255.255.255.0 up;ifconfig wg0:4 192.168.88.104 netmask 255.255.255.0 up;ifconfig wg0:5 192.168.88.105 netmask 255.255.255.0 up;ifconfig wg0:6 192.168.88.106 netmask 255.255.255.0 up;ifconfig wg0:7 192.168.88.107 netmask 255.255.255.0 up;ifconfig wg0:8 192.168.88.108 netmask 255.255.255.0 up;ifconfig wg0:9 192.168.88.109 netmask 255.255.255.0 up;iptables -A FORWARD -i %i -j ACCEPT; iptables -A FORWARD -o %i -j ACCEPT; iptables -t nat -A POSTROUTING -o eth0 -j MASQUERADE
-PostDown = ifconfig wg0:0 down;ifconfig wg0:1 down;ifconfig wg0:2 down;ifconfig wg0:3 down;ifconfig wg0:4 down;ifconfig wg0:5 down;ifconfig wg0:6 down;ifconfig wg0:7 down;ifconfig wg0:8 down;ifconfig wg0:9 down;iptables -D FORWARD -i %i -j ACCEPT; iptables -D FORWARD -o %i -j ACCEPT; iptables -t nat -D POSTROUTING -o eth0 -j MASQUERADE
+#PostUp   = ifconfig wg0:0 192.168.88.100 netmask 255.255.255.0 up;ifconfig wg0:1 192.168.88.101 netmask 255.255.255.0 up;ifconfig wg0:2 192.168.88.102 netmask 255.255.255.0 up;ifconfig wg0:3 192.168.88.103 netmask 255.255.255.0 up;ifconfig wg0:4 192.168.88.104 netmask 255.255.255.0 up;ifconfig wg0:5 192.168.88.105 netmask 255.255.255.0 up;ifconfig wg0:6 192.168.88.106 netmask 255.255.255.0 up;ifconfig wg0:7 192.168.88.107 netmask 255.255.255.0 up;ifconfig wg0:8 192.168.88.108 netmask 255.255.255.0 up;ifconfig wg0:9 192.168.88.109 netmask 255.255.255.0 up;iptables -A FORWARD -i %i -j ACCEPT; iptables -A FORWARD -o %i -j ACCEPT; iptables -t nat -A POSTROUTING -o eth0 -j MASQUERADE
+#PostDown = ifconfig wg0:0 down;ifconfig wg0:1 down;ifconfig wg0:2 down;ifconfig wg0:3 down;ifconfig wg0:4 down;ifconfig wg0:5 down;ifconfig wg0:6 down;ifconfig wg0:7 down;ifconfig wg0:8 down;ifconfig wg0:9 down;iptables -D FORWARD -i %i -j ACCEPT; iptables -D FORWARD -o %i -j ACCEPT; iptables -t nat -D POSTROUTING -o eth0 -j MASQUERADE
+PostUp   = iptables -t nat -A POSTROUTING -o eth0 -j MASQUERADE
+PostDown = iptables -t nat -D POSTROUTING -o eth0 -j MASQUERADE
 mtu = 1400
 
 #home-pc
