--- a/wg-client-allowedips.conf
+++ b/wg-client-allowedips.conf
@@ -9,7 +9,8 @@
 # 如发现访问国内网站较慢，在资源监视器中看到绕道 vpn 访问。通过 dns.google,ipip.net等获取域名解析、IP地址位置等信息对国内网站进行优化。
 # 一种是属于有境外cdn的国内网站，则将该网站添加到域名列表，解析为国内ip地址，再修改  AllowedIPs 不包括该网段。
 # 一种是无境外cdn的国内网站，只有国内 IP 地址，修改 AllowedIPs 不包括该网段。
-
+# twitter video hk
+AllowedIPs = 117.18.0.0/16
 AllowedIPs = 0.0.0.0/5
 AllowedIPs = 8.0.0.0/7
 AllowedIPs = 11.0.0.0/8
