--- a/dnsmasq.conf
+++ b/dnsmasq.conf
@@ -16,40 +16,39 @@ address=/huawei.com/120.52.73.188
 #address=/services.googleapis.cn/172.217.5.202
 address=/github-production-release-asset-2e65be.s3.amazonaws.com/120.52.73.188
 
-address=/phncdn.com/192.168.88.1
-address=/pornhub.com/192.168.88.1
-address=/trafficjunky.net/192.168.88.1
-address=/securedataimages.com/192.168.88.1
-address=/trafficjunky.net/192.168.88.1
-address=/adtng.com/192.168.88.1
-address=/etahub.com/192.168.88.1
+#address=/phncdn.com/192.168.88.1
+#address=/pornhub.com/192.168.88.1
+#address=/trafficjunky.net/192.168.88.1
+#address=/securedataimages.com/192.168.88.1
+#address=/trafficjunky.net/192.168.88.1
+#address=/adtng.com/192.168.88.1
+#address=/etahub.com/192.168.88.1
 
-address=/pornhub.com/192.168.88.100
-address=/ci.phncdn.com/192.168.88.101
-address=/cv.phncdn.com/192.168.88.102
-address=/di.phncdn.com/192.168.88.103
-address=/dw.phncdn.com/192.168.88.104
-address=/ew.phncdn.com/192.168.88.105
-address=/cdn1d-static-shared.phncdn.com/192.168.88.106
-address=/c1v-h.phncdn.com/192.168.88.107
-address=/d1v-h.phncdn.com/192.168.88.108
+#address=/pornhub.com/192.168.88.100
+#address=/ci.phncdn.com/192.168.88.101
+#address=/cv.phncdn.com/192.168.88.102
+#address=/di.phncdn.com/192.168.88.103
+#address=/dw.phncdn.com/192.168.88.104
+#address=/ew.phncdn.com/192.168.88.105
+#address=/cdn1d-static-shared.phncdn.com/192.168.88.106
+#address=/c1v-h.phncdn.com/192.168.88.107
+#address=/d1v-h.phncdn.com/192.168.88.108
 
-
-address=/aria.microsoft.com/192.168.88.1
+#address=/aria.microsoft.com/192.168.88.1
 #address=/config.teams.microsoft.com/192.168.88.1
 #address=/graph.microsoft.com/192.168.88.1
 #address=/settings.live.net/192.168.88.1
 #address=/blob.core.windows.net/192.168.88.1
-address=/storage.live.com/192.168.88.1
-address=/files.1drv.com/192.168.88.1
-address=/events.data.microsoft.com/192.168.88.1
-address=/events.data.msn.com/192.168.88.1
+#address=/storage.live.com/192.168.88.1
+#address=/files.1drv.com/192.168.88.1
+#address=/events.data.microsoft.com/192.168.88.1
+#address=/events.data.msn.com/192.168.88.1
 #address=/login.live.com/192.168.88.1
 #address=/api.onedrive.com/192.168.88.1
 #address=/skydrive.wns.windows.com/192.168.88.1
-address=/wns.windows.com/192.168.88.1
+#address=/wns.windows.com/192.168.88.1
 
-address=/ct.wangyi.cf/192.168.88.1
+#address=/ct.wangyi.cf/192.168.88.1
 
 all-servers 
 #server=8.8.8.8
@@ -57,7 +56,7 @@ all-servers
 server=127.0.0.1#5300
 server=/huawei.com/114.114.114.114
 server=/services.googleapis.cn/127.0.0.1#5300
-server=/phncdn.com/127.0.0.1#5353
+#server=/phncdn.com/127.0.0.1#5353
 server=/cn/127.0.0.1#5353
 server=/alibabadns.com/127.0.0.1#5353
 server=/alipay.com/127.0.0.1#5353
