--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -40,6 +40,7 @@ frontend https_proxy
     tcp-request content accept if { req_ssl_hello_type 1 }
     acl is_github_asset req_ssl_sni -i github-production-release-asset-2e65be.s3.amazonaws.com
     acl is_storage.live.com req_ssl_sni -i by3301.storage.live.com
+    acl is_aaozsg.bn.files.1drv.com req_ssl_sni -i aaozsg.bn.files.1drv.com
     acl is_ci.phncdn.com req_ssl_sni -i ci.phncdn.com
     acl is_cv.phncdn.com req_ssl_sni -i cv.phncdn.com
     acl is_di.phncdn.com req_ssl_sni -i di.phncdn.com
@@ -48,6 +49,7 @@ frontend https_proxy
 
     use_backend github-production-release-asset-2e65be.s3.amazonaws.com if is_github_asset
     use_backend by3301.storage.live.com if is_storage.live.com
+    use_backend aaozsg.bn.files.1drv.com if is_aaozsg.bn.files.1drv.com
     use_backend ci.phncdn.com if is_ci.phncdn.com
     use_backend cv.phncdn.com if is_cv.phncdn.com
     use_backend di.phncdn.com if is_di.phncdn.com
@@ -58,6 +60,8 @@ backend github-production-release-asset-2e65be.s3.amazonaws.com
     server web1 github-production-release-asset-2e65be.s3.amazonaws.com:443
 backend by3301.storage.live.com
     server web1 by3301.storage.live.com:443
+backend aaozsg.bn.files.1drv.com
+    server web1 aaozsg.bn.files.1drv.com:443    
 backend ci.phncdn.com
     server web1 ci.phncdn.com:443
 backend cv.phncdn.com
