--- a/sniproxy.conf
+++ b/sniproxy.conf
@@ -12,6 +12,7 @@ listener 192.168.88.1:443 {
 
 table {
     ct.wangyi.cf           127.0.0.1:5443
+    github-production-release-asset-2e65be.s3.amazonaws.com  *
     .*storage\.live\.com   *
     .*files\.1drv\.com     *
 }
