--- a/wg0.conf
+++ b/wg0.conf
@@ -6,6 +6,11 @@ ListenPort = 4430
 #PostDown = ifconfig wg0:0 down;ifconfig wg0:1 down;ifconfig wg0:2 down;ifconfig wg0:3 down;ifconfig wg0:4 down;ifconfig wg0:5 down;ifconfig wg0:6 down;ifconfig wg0:7 down;ifconfig wg0:8 down;ifconfig wg0:9 down;iptables -D FORWARD -i %i -j ACCEPT; iptables -D FORWARD -o %i -j ACCEPT; iptables -t nat -D POSTROUTING -o eth0 -j MASQUERADE
 PostUp   = iptables -t mangle -A POSTROUTING -o eth0 -p tcp -m tcp --tcp-flags SYN,RST SYN -j TCPMSS --set-mss 1380;iptables -t nat -A POSTROUTING -o eth0 -j MASQUERADE
 PostDown = iptables -t mangle -D POSTROUTING -o eth0 -p tcp -m tcp --tcp-flags SYN,RST SYN -j TCPMSS --set-mss 1380;iptables -t nat -D POSTROUTING -o eth0 -j MASQUERADE
+PostUp   = iptables -A FORWARD -i %i -j ACCEPT; iptables -A FORWARD -o %i -j ACCEPT; iptables -t nat -A POSTROUTING -o ens4 -j MASQUERADE
+PostUp   = iptables -D FORWARD -i %i -j ACCEPT; iptables -D FORWARD -o %i -j ACCEPT; iptables -t nat -D POSTROUTING -o ens4 -j MASQUERADE
+PostUp   = iptables -A FORWARD -i %i -j ACCEPT; iptables -A FORWARD -o %i -j ACCEPT; iptables -t nat -A POSTROUTING -o eth0 -j MASQUERADE
+PostUp   = iptables -D FORWARD -i %i -j ACCEPT; iptables -D FORWARD -o %i -j ACCEPT; iptables -t nat -D POSTROUTING -o eth0 -j MASQUERADE
+
 mtu = 1420
 
 #home-pc
