--- a/wg0.conf
+++ b/wg0.conf
@@ -33,5 +33,9 @@ PublicKey = Re+7ruSezEBfWzJ5BfaNuc+0cx1i881kl/uEzkf2Kzs=
 AllowedIPs = 192.168.88.5/32
 #PersistentKeepalive = 25
 
-
+#baba
+[Peer]
+PublicKey = tpy5l4Tc8UPdVo3UsxNk7vnTpb3VpkxnN+8E04Ruuzs=
+AllowedIPs = 192.168.88.6/32
+#PersistentKeepalive = 25
 
