--- a/dnsmasq.conf
+++ b/dnsmasq.conf
@@ -12,25 +12,8 @@ cache-size = 1000
 
 address=/www.ftchinese.com/118.143.65.103
 address=/ftchinese.com/118.143.65.103
-address=/huawei.com/120.52.73.188
 #address=/services.googleapis.cn/172.217.5.202
 #address=/github-production-release-asset-2e65be.s3.amazonaws.com/192.168.88.1
-
-#address=/aria.microsoft.com/192.168.88.1
-#address=/config.teams.microsoft.com/192.168.88.1
-#address=/graph.microsoft.com/192.168.88.1
-#address=/settings.live.net/192.168.88.1
-#address=/blob.core.windows.net/192.168.88.1
-#address=/storage.live.com/192.168.88.1
-#address=/files.1drv.com/192.168.88.1
-#address=/events.data.microsoft.com/192.168.88.1
-#address=/events.data.msn.com/192.168.88.1
-#address=/login.live.com/192.168.88.1
-#address=/api.onedrive.com/192.168.88.1
-#address=/skydrive.wns.windows.com/192.168.88.1
-#address=/wns.windows.com/192.168.88.1
-
-#address=/ct.wangyi.cf/192.168.88.1
 
 all-servers 
 #server=8.8.8.8
@@ -38,6 +21,7 @@ all-servers
 server=127.0.0.1#5300
 server=/services.googleapis.cn/127.0.0.1#5300
 server=/cn/127.0.0.1#5353
+server=/huawei.com/127.0.0.1#5353
 server=/alibabadns.com/127.0.0.1#5353
 server=/alipay.com/127.0.0.1#5353
 server=/alipayobjects.com/127.0.0.1#5353
