--- a/dnsmasq.conf
+++ b/dnsmasq.conf
@@ -21,6 +21,18 @@ all-servers
 server=127.0.0.1#5300
 server=/services.googleapis.cn/127.0.0.1#5300
 server=/cn/127.0.0.1#5353
+
+#-----csdn---------------
+server=/csdn.net/127.0.0.1#5353
+server=/csdnimg.cn/127.0.0.1#5353
+
+#-----douyu---------------
+server=/douyu.tv/127.0.0.1#5353
+server=/douyu.com/127.0.0.1#5353
+server=/douyucdn.cn/127.0.0.1#5353
+server=/douyuscdn.com/127.0.0.1#5353
+server=/douyutv.com/127.0.0.1#5353
+
 server=/huawei.com/127.0.0.1#5353
 server=/alibabadns.com/127.0.0.1#5353
 server=/alipay.com/127.0.0.1#5353
@@ -94,8 +106,6 @@ server=/wukong.com/127.0.0.1#5353
 server=/ixigua.com/127.0.0.1#5353
 server=/ixgvideo.com/127.0.0.1#5353
 server=/365yg.com/127.0.0.1#5353
-server=/douyu.tv/127.0.0.1#5353
-server=/douyu.com/127.0.0.1#5353
 server=/sina.com/127.0.0.1#5353
 server=/sina.net/127.0.0.1#5353
 server=/sinaapp.com/127.0.0.1#5353
